setting datepicker/ add color

--- a/src/assets/style/main.css
+++ b/src/assets/style/main.css
@@ -411,6 +411,16 @@
 .vc-title span::first-letter {
   text-transform: uppercase !important;
 }
+.vc-blue {
+  --vc-accent-200: #6e1595a3 !important;
+  --vc-accent-600: #6e1595 !important;
+}
+.vc-highlight-bg-outline, .vc-highlight-bg-none{
+  border-radius: 4px !important;
+  border: none !important;
+  background-color: #6e1595 !important;
+}
+
 
 @media screen and (max-width: 992px) {
   .search-form-field .vc-bordered {
