fix columns in filters

--- a/src/assets/style/main.css
+++ b/src/assets/style/main.css
@@ -420,6 +420,9 @@
   border: none !important;
   background-color: #6e1595 !important;
 }
+.vc-highlight{
+    
+}
 
 
 @media screen and (max-width: 992px) {
