--- a/src/assets/scss/elements/_pagination.scss
+++ b/src/assets/scss/elements/_pagination.scss
@@ -74,8 +74,13 @@
 	color: #cccccc;
 	font-size: 1.4rem;
 	font-weight: 400;
-	margin-left: 1.2rem;
+	// margin-left: 1.2rem;
+	margin-left: 3rem;
 	white-space: nowrap;
+}
+
+.page-link-next{
+  margin-left: 1.2rem;
 }
 
 .page-item {
