adaptive address-delivery and user-data  page(three things)

--- a/src/assets/style/main.css
+++ b/src/assets/style/main.css
@@ -305,6 +305,7 @@
   .breadcrumb {
     margin-bottom: 0 !important;
     padding-bottom: 0 !important;
+    max-width: 200px;
   }
 }
 
@@ -319,7 +320,7 @@
   .search-form-select .vs__dropdown-menu {
     min-width: calc(100vw - 11px*2 - 15px*2);
   }
-  
+
   .search-form-select.search-form-select_to .vs__dropdown-menu {
     transform: translateX(-33%);
   }
@@ -465,7 +466,7 @@
     top: -48px;
     left: 23px;
   }
-  
+
 .vc-weekdays {
   margin-bottom: 4px;
   /* max-width: 314px; */
