--- a/src/assets/scss/elements/_breadcrumb.scss
+++ b/src/assets/scss/elements/_breadcrumb.scss
@@ -24,6 +24,7 @@
 }
 
 .breadcrumb {
+  align-items: center;
   background-color: transparent;
   border-radius: 0;
   margin: 0;
@@ -63,7 +64,7 @@
   & + .breadcrumb-item {
     padding-left: 1rem;
 
-    &:before {
+    &::before {
       color: #999999;
       content: ">";
       font-family: Gilroy-Medium;
@@ -125,7 +126,7 @@
   }
 
   .breadcrumb-item + .breadcrumb-item {
-    padding-left: 0;
+    // padding-left: 0;
   }
 
   .breadcrumb-item {
