--- a/src/assets/style/main.css
+++ b/src/assets/style/main.css
@@ -372,7 +372,7 @@
   --vc-highlight-solid-bg: var(--primary_bg) !important; */
 }
 
-.vc-popover-content-wrapper {
+.search-form-field .vc-popover-content-wrapper {
   left: -18% !important;
   right: auto !important;
   z-index: 1000 !important;
